--- a/twitty/lib/twitt_web/live/post_live/index.html.heex
+++ b/twitty/lib/twitt_web/live/post_live/index.html.heex
@@ -1,4 +1,7 @@
-<h1>Timeline</h1>
+<h1 style="position: fixed; top: 45rem; left: 20px;">Timeline</h1>
+<button style="color: white; background-color: #1da1f2; padding: 10px 20px; border: none; border-radius: 5px; position: fixed; top: 50rem; left: 20px; display: flex; justify-content: center; align-items: center;"><%= live_patch "New Post", to: Routes.post_index_path(@socket, :new) %></button>
+
+
 
 <%= if @live_action in [:new, :edit] do %>
   <.modal return_to={Routes.post_index_path(@socket, :index)}>
@@ -21,4 +24,5 @@
   </div>
 
 
-<span><%= live_patch "New Post", to: Routes.post_index_path(@socket, :new) %></span>
+  
+
